add html-elements and css-styles in main sec

--- a/index.html
+++ b/index.html
@@ -5,9 +5,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="ITrySoH" />
-    <title>First Commit</title>
+    <title>Digital Agency page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@200;300;400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <img
+        src="img/nav logo.png"
+        alt="Digital company Logo"
+        width="70px"
+        height="35px"
+        title="Qipper"
+      />
+      <nav>
+        <ul>
+          <li><a href="/">home</a></li>
+          <li><a href="/">gallery</a></li>
+          <li class="nowrap"><a href="/">about us</a></li>
+          <li><a href="/">contact</a></li>
+          <li><p>Eng</p></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div class="left logoimg">
+          <img src="img/b.png" alt="" width="458px" height="441px" />
+        </div>
+        <div class="right">
+          <p class="state1">web site apps</p>
+          <p class="state2">digital agency</p>
+          <p class="state3">prospection</p>
+          <a class="btn" href="">get a discount</a>
+        </div>
+        <div class="state4">
+          <h1>Qipper</h1>
+          <p class="state4p">
+            With qipper, You don't have to think about the quality of web
+            content anymore. The qipper project was designed only for those in
+            need of quality and style. We know how to sell and we do it well.
+            <br />
+            <br />We have been a close-knit team for a long time, we are more
+            than 10 years old. Qipper is our common interest and common goal.
+            Everyone who contacts us receives only positive feedback from their
+            customers. We don't try to please everyone, but we try to open
+            everyone's eyes. Keep track of who you are asking for help.
+          </p>
+        </div>
+      </section>
+      <p class="state5">We are doing</p>
+      <ul class="adv-ul">
+        <li>Web sites</li>
+        <li>Android / IOS Apps</li>
+        <li>Corporate identity</li>
+        <li>Advertising</li>
+      </ul>
+      <section class="sec2">
+        <div class="sec2p">
+          <p class="sec2pp1">just do it</p>
+          <p class="sec2pp2">...said once a good man</p>
+          <p class="sec2pp3">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged. It was popularised in the 1960s
+            with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
+        <div class="sec2img">
+          <img
+            class="imgg"
+            src="img/card1.png"
+            alt=""
+            width="636px"
+            height="415px"
+          />
+        </div>
+      </section>
+      <section>
+        <div class="sec3d1">
+          <p class="sec2pp1">WE CAN - WE DO</p>
+          <a class="sec3btn" href="">More</a>
+        </div>
+        <p class="sec3p">..and these are our words</p>
+        <div class="imgs">
+          <img src="img/Rectangle 5.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 6.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 5.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 6.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 5.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 6.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 5.png" alt="" width="292px" height="264px" />
+          <img src="img/Rectangle 6.png" alt="" width="292px" height="264px" />
+        </div>
+      </section>
+      <section class="sec4">
+        <p class="sec4p1">Fill out the application form and we will call</p>
+        <div class="sec4d1">
+          <p class="sec4p2">you</p>
+          <p class="sec4p3">
+            You will be answered by our qualified employee who will help you
+            with the selection and completion of the technical task. You only
+            need to leave your own data. Check that the information is filled in
+            correctly.
+          </p>
+        </div>
+        <!-- <div class="inputform">
+          <input type="text" />
+        </div> -->
+      </section>
+    </main>
   </body>
 </html>
